--- a/sample.html
+++ b/sample.html
@@ -1,29 +1,42 @@
-<!DOCTYPE html> 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
-	<head>
-		<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-		<title>Untitled Document</title>
-		<script src="jquery.js" type="text/javascript"></script>
-		<script src="mustache.js" type="text/javascript"></script>
-		<script src="jquery.json.js" type="text/javascript"></script>
-		<script type="text/javascript">
-			var vars = [], hash;
-		    var hashes = "teste=1050&coisa=legal".split('&');
-		    for(var i = 0; i < hashes.length; i++)
-		    {
-		        hash = hashes[i].split('=');
-		        vars[hash[0]] = hash[1];
-		    }
-			var obj = {};
-			for(key in vars) {
-				obj[key] = vars[key];
-			}
-			for(a in obj) {
-				document.write(a);
-				document.write(obj[a]);
-			}
-		</script>
-	</head>
-	<body>
-	</body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+        <title>Untitled Document</title>
+        <script src="jquery.js" type="text/javascript">
+        </script>
+        <script src="mustache.js" type="text/javascript">
+        </script>
+        <script src="jquery.json.js" type="text/javascript">
+        </script>
+        <script src="jquery.offline.js" type="text/javascript">
+        </script>
+        <script type="text/javascript">
+            function view_page1(request, template, args){
+				return new Offline.Response(Offline.renderer(template, {}));
+            }
+            function view_page2(request, template, args){
+                return new Offline.Response(Offline.renderer(template, {}));
+            }
+            var urls = [{
+                url: 'home',
+                view: view_page1,
+				template: "page1.html",
+                args: {},
+                name: 'home'
+            }, {
+                url: 'page2',
+                view: view_page2,
+				template: "page2.html",
+                args: {},
+                name: 'other_page'
+            }];
+			Offline.init(urls, "#container");
+            Offline.get("home");
+        </script>
+    </head>
+    <body>
+        <div id="container">
+        </div>
+    </body>
 </html>
