--- a/sample.html
+++ b/sample.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html>
+<html lang="en" manifest="sample.manifest">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
         <title>Untitled Document</title>
@@ -19,7 +19,7 @@
                 return new Offline.Response(Offline.renderer(template, {}));
             }
             var urls = [{
-                url: 'home',
+                url: '',
                 view: view_page1,
 				template: "page1.html",
                 args: {},
@@ -32,7 +32,6 @@
                 name: 'other_page'
             }];
 			Offline.init(urls, "#container");
-            Offline.get("home");
         </script>
     </head>
     <body>
