--- a/page1.html
+++ b/page1.html
@@ -1,8 +1,43 @@
 <div id="page1">
     <h1>Home</h1>
-    <p>
-        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus
-    </p>
-    <a href="#page2">Page 2</a>
-	<a href="#error">Error</a>
+    <h2>Posts</h2>
+    {{#entries}}
+        <h3>{{title}}</h3>
+        <p>{{content}}</p>
+    {{/entries}}
+    
+    {{^entries}}
+        <p>Nothing...</p>
+    {{/entries}}
+    <table>
+        <tr>
+            <th>
+                <label for="title">Title:</label>
+            </th>
+            <td>
+                <input name="title" id="id_title" type="text">
+            </td>
+        </tr>
+        <tr>
+            <th>
+                <label for="content">Content:</label>
+            </th>
+            <td>
+                <textarea name="content" id="id_content"></textarea>
+            </td>
+        </tr>
+        <tr>
+            <th>&nbsp;</th>
+            <td>
+                <button onclick="save_entry();">Save</button>
+            </td>
+        </tr>
+    </table>
 </div>
+<script type="text/javascript">
+    function save_entry() {
+        var title = $('#id_title').val();
+        var content = $('#id_content').val();
+        Offline.post('', {title: title, content: content});
+    }
+</script>
