--- a/sample.html
+++ b/sample.html
@@ -3,44 +3,28 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
         <title>Untitled Document</title>
+        <link rel="stylesheet" type="text/css" href="style.css"/>
         <script src="jquery.js" type="text/javascript">
         </script>
         <script src="mustache.js" type="text/javascript">
         </script>
         <script src="jquery.json.js" type="text/javascript">
         </script>
+        <script src="jLinq-2.2.1.js" type="text/javascript">
+        </script>
         <script src="jquery.offline.js" type="text/javascript">
         </script>
+        <script src="blog/models.js" type="text/javascript">
+        </script>
+        <script src="blog/views.js" type="text/javascript">
+        </script>
         <script type="text/javascript">
-            function view_page1(request, template, args){
-				return new Offline.Response(Offline.renderer(template, {}));
-            }
-            function view_page2(request, template, args){
-                return new Offline.Response(Offline.renderer(template, {}));
-            }
-			function view_error(request, args){
-                var t = {};
-				var b = t.teste.legal;
-				alert(b);
-				return "";
-            }
             var urls = [{
                 url: '',
-                view: view_page1,
+                view: BlogViews.index,
 				template: "page1.html",
                 args: {},
                 name: 'home'
-            }, {
-                url: 'page2',
-                view: view_page2,
-				template: "page2.html",
-                args: {},
-                name: 'other_page'
-            }, {
-                url: 'error',
-                view: view_error,
-                args: {},
-                name: 'error'
             }, {
                 url: '500',
                 template: "500.html",
