--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> 
 <html lang="en" manifest="sample.manifest"> 
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Untitled Document</title>
         <link rel="stylesheet" type="text/css" href="style.css"/>
         <script src="../lib/jquery.js" type="text/javascript">
